KNOWN BUGS:
* The code sometimes uses timeout_client where it should use a server timeout.
|
Changes since 20050514a:
- Bugfix: fetchnews now presents an error message to the user if the
  greeting banner code isn't 200 or 201. Reported by Werner Partner.

20050514a: Changes since 20050422a:
- Stability: If getting a non-text reply in response to ARTICLE, leave
  current server alone on the assumption we're out of synch and proceed
  to next.
- Bugfix: fetchnews now properly detects an empty upstream group.
  Reported by John Carlyle-Clarke.

20050422a: Changes since 20050412a:
- Bugfix: texpire can crash for some spool states (on incomplete
  groupinfo), reported by John Carlyle-Clarke.
- Documentation: new manual pages leafnode-version(1) and sendbatch(1),
  courtesy of Matěj Cepl of Debian.

20050412a: Changes since 20050324a:
- Feature: newsq -f will list the article bodies to be fetched in
  delaybody mode. Suggested by Cory C. Albrecht.
- Packaging: Drop obsolete README_FIRST file from .spec file to unwedge build.
  Reported by William Hooper.

20050324a: Changes since 20050321a:
- Documentation: manual pages have been revised, with some help from
  Dietrich Schaffer.
- Documentation: help output in programs has been revised.
- Bugfix: the deleted-articles journal was always empty. Reported by
  Jörg Lüders.

20050321a: Changes since 20050215a:
- INCOMPATIBLE Change: forward port configuration parser fix from
  leafnode-1.11, to allow the right hand side of configuration or filter
  file to be quoted, useful when the NUMBER SIGN character needs to be
  specified. This may require you to change the configuration when you
  are using NUMBER SIGN #, QUOTATION MARK " or BACKSLASH/REVERSE SOLIDUS \
  character on the right hand side (in passwords, PC regular expressions
  etc.) of a configuration line.
- Change: when deleting articles (supersedes, cancel, ...) and we don't
  rebuild the overview right away, store a line in a new file that marks